# joi

./: .gitignore  .gitmodules  CMakeLists.txt
shaders/: default.frag  default.vert  shader.fs  shader.vs  shd_default.frag  shd_default.vert
sprites/: fnt_good_neighbors.aseprite  munchkin.aseprite  spr_munchkin.aseprite  spr_old_hut.aseprite
src/: aseprite.cpp  aseprite.h  joi.cpp  joi.h  main.cpp  resourceManager.cpp  resourceManager.h  shader.cpp  shader.h  sprite.cpp  sprite.h
src/glad/: CMakeLists.txt  glad.c  glad.h
